# SuRF_cpp

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_art.cpp  benchmark_art.h  benchmark_bitvector.cpp  benchmark_bloom.cpp  benchmark_bloom.h  benchmark_btree.cpp  benchmark_btree.h  benchmark_fst.cpp  benchmark_louds.cpp  benchmark_louds.h  benchmark_louds_dense_new.h  benchmark_louds_dense_paper.h  benchmark_louds_sparse_new.h  benchmark_louds_sparse_paper.h  benchmark_poplar.h  benchmark_surf_new.cpp  benchmark_surf_new.h  benchmark_surf_paper.cpp  benchmark_surf_paper.h  bloom.hpp  test.cpp  utils.cpp  utils.h
benchmark/results/: art.csv  btree.csv  fst.csv  louds.csv  plots.ipynb  surf_new.csv  surf_paper.csv
data/: generator.py  input  test.txt
surf/: CMakeLists.txt  builder.h  input.h  sst.h  suffix.h  surf.h  surf_file.cpp  test.cpp  utils.h
surf/bitvector/: CMakeLists.txt  benchmark_bitvector.cpp  bitvector.h
surf/bloom/: bloom.h
surf/test/: test_bit_vector.cpp
surf/utils/: bit_vector.h
